feat: basic user account setup
